--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
                 <img class="ball" src="images/brutus.jpg" />
                 <p>Brutus</p>
             </div>
+            <div class="person-frame-inner">
+                <img class="ball" src="images/nelly.jpg" />
+                <p>Nelly</p>
+            </div>
         </div>
     </body>
 </html>
