--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <div id="heads-area">
+            </div>
             <div class="person-frame-inner">
                 <img class="ball" src="images/max_gruber.jpg" />
                 <p>Max Gruber</p>
@@ -28,6 +29,10 @@
             <div class="person-frame-inner">
                 <img class="ball" src="images/charlie_vancleve.jpg" />
                 <p>Charlie Van Cleve</p>
+            </div>
+            <div class ="person-frame-iner">
+                <img class="ball" src="images/IMG_0839.jpg" />
+                <p>Drew</p>
             </div>
         </div>
     </body>
