Add Meghana Malur

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <div id="heads-area">
+            
             <div class="person-frame-inner">
                 <img class="ball" src="images/Dominguez.Samuel.photo.JPG" />
                 <p>Sam Dominguez</p>
@@ -36,6 +37,10 @@
             <div class="person-frame-inner">
                 <img class="ball" src="images/Leon.jpg" />
                 <p>Leon De Noronha</p>
+            </div>
+            <div class="person-frame-inner">
+                <img class="ball" src="images/meghanamalur.jpg" />
+                <p>Meghana Malur</p>
             </div>
         </div>
     </body>
