--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <img class="ball" src="images/charlie_vancleve.jpg" />
                 <p>Charlie Van Cleve</p>
             </div>
-            <div class ="person-frame-iner">
-                <img class="ball" src="images/IMG_0839.jpg" />
+            <div class ="person-frame-inner">
+                <img class="ball" src="images/DSC03139.JPG" />
                 <p>Drew</p>
             </div>
         </div>
