--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <img class="ball" src="images/nelly.jpg" />
                 <p>Nelly</p>
             </div>
-            </div>
+            <div class="person-frame-inner">
                 <img class="ball" src="images/franc_lleshaj.jpg" />
                 <p>Franc Lleshaj</p>
             </div>
