Commit Katie Castaneda

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <p>Josh VonSeggern</p>
         </div>
         <div class="person-frame-inner">
-            <img class="ball" src="images/brutus.jpg" />
+            <img class="ball" src="images/KatieCastaneda.JPG" />
             <p>Katie Castaneda!</p>
         </div>
         <div class="person-frame-inner">
