--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
             <img class="ball" src="images/sujay_godugu.jpg" />
             <p>Sujay Godugu</p>
         </div>
+        <div class="person-frame-inner">
+            <img class="ball" src="images/Gautam_Rao.jpg" />
+            <p>Gautam Rao</p>
+        </div> 
     </div>
 </body>
 
