added kyle face

--- a/index.html
+++ b/index.html
@@ -1,149 +1,154 @@
 <html>
-
-<head>
-    <link rel="stylesheet" type="text/css" href="main.css">
+  <head>
+    <link rel="stylesheet" type="text/css" href="main.css" />
     <script src="main.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="heads-area">
-        <div class="person-frame-inner">
-            <img class="ball" src="images/Cameron_Erdman.jpg" />
-            <p>Cameron Erdman</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/Dominguez.Samuel.photo.JPG" />
-            <p>Sam Dominguez</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/max_gruber.jpg" />
-            <p>Max Gruber</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/adam_lis.jpg" />
-            <p>Adam Lis</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/andrew_haberlandt.jpg" />
-            <p>Andrew haberlandt</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/willerkman.jpg" />
-            <p>Will Erkman</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/cute me.jpg" />
-            <p>Mackenzie Scott</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/titan_chen.jpg" />
-            <p>Titan chen</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/alek_kundla.JPG" />
-            <p>Alek Kundla</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/adam_zen.jpg" />
-            <p>Adam, but more Zen</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/amy_niu.jpg" />
-            <p>Amy Niu</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/charlie_vancleve.jpg" />
-            <p>Charlie Van Cleve</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/Leon.jpg" />
-            <p>Leon De Noronha</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/Amyas Dawson.jpg" />
-            <p>Amyas</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/nelly.jpg" />
-            <p>Nelly</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/franc_lleshaj.jpg" />
-            <p>Franc Lleshaj</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/34F7F68C-86CE-46FF-BB55-37679F9C8D9C_1_105_c.jpeg" />
-            <p>Andrew Shen</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/ervin_qalliaj.jpg" />
-            <p>Ervin Qalliaj</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/gurbaksh_gill.JPG" />
-            <p>Gurbaksh</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/Karthick.jpg" />
-            <p>Karthick Sivasubramanian</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/Profile Pic.jpg" />
-            <p>Kevin Nguyen</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/DSC03139.JPG" />
-            <p>Drew</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/nafees_sathik.jpg" />
-            <p>Nafees Sathik</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/meghanamalur.jpg" />
-            <p>Meghana Malur</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/Josh_VonSeggern.JPG" />
-            <p>Josh VonSeggern</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/brutus.jpg" />
-            <p>Katie Castaneda!</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/Cameron_Millar.jpg" />
-            <p>Cameron Millar</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/sujay_godugu.jpg" />
-            <p>Sujay Godugu</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/Gautam_Rao.jpg" />
-            <p>Gautam Rao</p>
-        </div> 
-        <div class="person-frame-inner">
-            <img class="ball" src="images/Xiaoyiqian.jpg" />
-            <p>Xiaoyi Qian</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/xiaoqianxu.jpg" />
-            <p>Xiaoqian Xu</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/zachboyce.jpg" />
-            <p>Zach Boyce</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/EDFPTEdXUAERBwV.jpg" />
-            <p>Jenny Yi</p>
-        </div>
-        <div class="person-frame-inner">
-            <img class="ball" src="images/JessicaLopez.jpg" />
-            <p>Jessica Lopez</p>
-        </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/Cameron_Erdman.jpg" />
+        <p>Cameron Erdman</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/Dominguez.Samuel.photo.JPG" />
+        <p>Sam Dominguez</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/max_gruber.jpg" />
+        <p>Max Gruber</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/adam_lis.jpg" />
+        <p>Adam Lis</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/andrew_haberlandt.jpg" />
+        <p>Andrew haberlandt</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/willerkman.jpg" />
+        <p>Will Erkman</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/cute me.jpg" />
+        <p>Mackenzie Scott</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/titan_chen.jpg" />
+        <p>Titan chen</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/alek_kundla.JPG" />
+        <p>Alek Kundla</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/adam_zen.jpg" />
+        <p>Adam, but more Zen</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/amy_niu.jpg" />
+        <p>Amy Niu</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/charlie_vancleve.jpg" />
+        <p>Charlie Van Cleve</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/Leon.jpg" />
+        <p>Leon De Noronha</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/Amyas Dawson.jpg" />
+        <p>Amyas</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/nelly.jpg" />
+        <p>Nelly</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/franc_lleshaj.jpg" />
+        <p>Franc Lleshaj</p>
+      </div>
+      <div class="person-frame-inner">
+        <img
+          class="ball"
+          src="images/34F7F68C-86CE-46FF-BB55-37679F9C8D9C_1_105_c.jpeg"
+        />
+        <p>Andrew Shen</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/ervin_qalliaj.jpg" />
+        <p>Ervin Qalliaj</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/gurbaksh_gill.JPG" />
+        <p>Gurbaksh</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/Karthick.jpg" />
+        <p>Karthick Sivasubramanian</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/Profile Pic.jpg" />
+        <p>Kevin Nguyen</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/DSC03139.JPG" />
+        <p>Drew</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/nafees_sathik.jpg" />
+        <p>Nafees Sathik</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/meghanamalur.jpg" />
+        <p>Meghana Malur</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/Josh_VonSeggern.JPG" />
+        <p>Josh VonSeggern</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/brutus.jpg" />
+        <p>Katie Castaneda!</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/Cameron_Millar.jpg" />
+        <p>Cameron Millar</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/sujay_godugu.jpg" />
+        <p>Sujay Godugu</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/Gautam_Rao.jpg" />
+        <p>Gautam Rao</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/Xiaoyiqian.jpg" />
+        <p>Xiaoyi Qian</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/xiaoqianxu.jpg" />
+        <p>Xiaoqian Xu</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/zachboyce.jpg" />
+        <p>Zach Boyce</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/EDFPTEdXUAERBwV.jpg" />
+        <p>Jenny Yi</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/JessicaLopez.jpg" />
+        <p>Jessica Lopez</p>
+      </div>
+      <div class="person-frame-inner">
+        <img class="ball" src="images/kyle_williams.jpg" />
+        <p>Kyle Williams</p>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
